--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,14 @@
 language: python
-
-pip:
-~	"2.7.6"
+python:
+  - "2.6"
+  - "2.7"
+  - "3.2"
+  - "3.3"
+  - "3.4"
+  - "3.5.0b3"
+  - "3.5-dev"
+  - "nightly"
+# command to install dependencies
+install: "pip install -r requirements.txt"
+# command to run tests
+script: nosetests
