--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
-language: node_js
-node_js:
-- stable
-before_install: npm install -g grunt-cli
-install: cd app &&  npm install
-script: grunt test
+benguage: python
+python:
+  - "2.6"
+  - "2.7"
+  - "3.2"
+  - "3.3"
+  - "3.4"
+  - "nightly"
+# command to install dependencies
+install:
+  - "pip install ."
+  - "pip install -r requirements.txt"
+# command to run tests
+script: nosetests
 before_deploy: cd ..
 
 deploy:
