--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "grunt"
+    "test": "grunt test"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-cli": "0.1",
     "grunt-concurrent": "^2.0.0",
     "grunt-nodemon": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
