--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ node_js:
   - "0.6"
   - "iojs"
   - "iojs-v1.0.4"
+before_install: npm install -g grunt-cli
+install: npm install
+before_script: grunt build
