changed Dockerfile according to docker/flask tutorial

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,24 @@
-# Start the node.js application server for local development.
+web:
+  build: .
+  ports:
+   - "5000:5000"
+  volumes:
+   - ".:/app"
 appsvr:
   build: ./app
   dockerfile: "Dockerfile.dev"
   volumes:
-    - "app:/src/app"
+  - "app:/src/app"
   expose:
-    - "3000"
-
+  - "3000"
 nginx:
   restart: always
   build: ./nginx
   ports:
-    - "80:8080"
+  - "80:8080"
   volumes:
-    - /www/public
+  - /www/public
   volumes_from:
-    - appsvr
+  - appsvr
   links:
-    - appsvr:appsvr
+  - appsvr:appsvr
