--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-benguage: python
+language: python
 python:
   - "2.6"
   - "2.7"
@@ -8,11 +8,13 @@ python:
   - "nightly"
 # command to install dependencies
 install:
-  - "pip install ."
-  - "pip install -r requirements.txt"
+  - "pip install"
+  - "pip install -r app/requirements.txt"
 # command to run tests
 script: nosetests
 before_deploy: cd ..
+
+sudo: false
 
 deploy:
   # Deploy master branch to production environment  on merge (or push)
