--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
   - "nightly"
 # command to install dependencies
 install:
-  - "pip install --upgrade pip"
+  - "sudo pip install --upgrade pip"
   - "pip install ."
   - "pip install -r requirements.txt"
 # command to run tests
