--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - "pip install"
   - "pip install -r requirements.txt"
 # command to run tests
-script: nosetests
+#script: nosetests
 before_deploy: cd ..
 
 sudo: false
