--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,11 @@
-# Start the node.js application server for local development.
-appsvr:
-  build: ./app
-  dockerfile: "Dockerfile.dev"
-  volumes:
-    - "app:/src/app"
-  expose:
-    - "3000"
-
-nginx:
-  restart: always
-  build: ./nginx
+web:
+  build: .
   ports:
-    - "80:8080"
+   - "5000:5000"
   volumes:
-    - /www/public
-  volumes_from:
-    - appsvr
+   - "./app"
   links:
-    - appsvr:appsvr
+   - redis
+
+redis:
+  image: redis- appsvr:appsvr
