changed docker-compose.yml and Dockerfile

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -19,16 +19,16 @@ RUN apt-get install -y tar git curl nano wget dialog net-tools build-essential
 RUN apt-get install -y python python-dev python-distribute python-pip
 
 # Copy the application folder inside the container
-ADD /app /my_application
+ADD . /my_application
 
 # Get pip to download and install requirements:
-RUN pip install -r /app/requirements.txt
+RUN pip install -r requirements.txt
 
 # Expose ports
 EXPOSE 80
 
 # Set the default directory where CMD will execute
-WORKDIR /app
+WORKDIR .
 
 # Set the default command to execute    
 # when creating a new container
