--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
 # command to install dependencies
 install:
   - "pip install"
-  - "pip install -r requirements.txt"
+  - "pip install -r app/requirements.txt"
 # command to run tests
 script: nosetests
 before_deploy: cd ..
