deleted unnecesary js files

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -33,4 +33,4 @@ EXPOSE 80
 # Set the default command to execute    
 # when creating a new container
 # i.e. using CherryPy to serve the application
-CMD python server.py
+#CMD python server.py
