replaced nginx with uwsgi

--- a/app/Dockerfile.dev
+++ b/app/Dockerfile.dev
@@ -29,7 +29,7 @@ FROM thehackerati/node-base:latest
 
 
 # From here, we load our application's code so the previous docker "layer"dd the application resources URL
-RUN echo "deb http://archive.ubuntu.com/ubuntu/ $(lsb_release -sc) main universe" >> /etc/apt/sources.list
+#RUN echo "deb http://archive.ubuntu.com/ubuntu/ $(lsb_release -sc) main universe" >> /etc/apt/sources.list
 
 # Update the sources list
 RUN apt-get update
