replaced hackerati/nodebase in Dockerfile with ubuntu

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,9 +3,9 @@
 # 
 ###########################################################################
 
-FROM thehackerati/node-base:latest
+#FROM thehackerati/node-base:latest
 
- 
+FROM ubuntu 
 # From here, we load our application's code so the previous docker "layer"dd the application resources URL
 RUN echo "deb http://archive.ubuntu.com/ubuntu/ $(lsb_release -sc) main universe" >> /etc/apt/sources.list
 
