--- a/app/Dockerfile.dev
+++ b/app/Dockerfile.dev
@@ -25,12 +25,12 @@
 #Dockerfile to build AWS deployment node-app-template container image
 ###########################################################################
 
-FROM thehackerati/node-base:latest
+#FROM thehackerati/node-base:latest
 
 
 # From here, we load our application's code so the previous docker "layer"dd the application resources URL
 #RUN echo "deb http://archive.ubuntu.com/ubuntu/ $(lsb_release -sc) main universe" >> /etc/apt/sources.list
-
+FROM ubuntu
 # Update the sources list
 RUN apt-get update
 
