replaced appsvr with localhost in flask_project and linked to web instead of appsvr in nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,9 @@
+web:
+  build: .
+  ports:
+   - "5000:5000"
+  volumes:
+   - ".:/app"
 appsvr:
   build: ./app
   dockerfile: "Dockerfile.dev"
@@ -14,3 +20,5 @@ nginx:
   - /www/public
   volumes_from:
   - appsvr
+  links:
+  - web:web
