--- a/app/Dockerfile.dev
+++ b/app/Dockerfile.dev
@@ -29,16 +29,17 @@
 FROM python:2-onbuild
 
 # Update the sources list
-# RUN apt-get update
+RUN apt-get update
 
 # Install basic applications
-# RUN apt-get install -y tar git curl nano wget dialog net-tools build-essential
+RUN apt-get install -y tar git curl nano wget dialog net-tools build-essential
 
-WORKDIR app
+#WORKDIR app
 
 EXPOSE 5000
 
 # Set the default command to execute    
 # when creating a new container
 # i.e. using CherryPy to serve the application
-CMD python app/app.py                     
+RUN pwd
+CMD python app.py                     
