--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,3 +1,8 @@
 FROM tutum/nginx
 RUN rm /etc/nginx/sites-enabled/default
 ADD sites-enabled/ /etc/nginx/sites-enabled
+# Update the sources list
+RUN apt-get update
+
+# Install basic applications
+RUN apt-get install -y tar git curl nano wget dialog net-tools build-essential
