removed 'rm default' line from nginx Dockerfile which prevented containers building

--- a/app/Dockerfile.dev
+++ b/app/Dockerfile.dev
@@ -33,12 +33,12 @@ FROM python:2-onbuild
 
 # Install basic applications
 # RUN apt-get install -y tar git curl nano wget dialog net-tools build-essential
-ADD . app
-WORKDIR app
-
+#ADD . app
+#WORKDIR app
 EXPOSE 5000
 
+RUN pwd
 # Set the default command to execute    
 # when creating a new container
 # i.e. using CherryPy to serve the application
-CMD sudo chmod +x app/app.py &&  python app/app.py                     
+CMD python app.py                  
