--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,8 +1,7 @@
-FROM tutum/nginx
-RUN rm /etc/nginx/sites-enabled/default
-ADD sites-enabled/ /etc/nginx/sites-enabled
-# Update the sources list
-RUN apt-get update
+FROM nginx
 
-# Install basic applications
-RUN apt-get install -y tar git curl nano wget dialog net-tools build-essential
+COPY uwsgi_params /etc/nginx/uwsgi_params
+COPY app_nginx.conf /etc/nginx/conf.d/app_nginx.conf
+
+RUN rm /etc/nginx/conf.d/default.conf
+
