Uncomment the sudo line, remove before_deploy cd

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ install:
   - "pip install -r app/requirements.txt"
 # command to run tests
 script: nosetests
-before_deploy: cd ..
+#before_deploy: cd ..
 
-#sudo: false
+sudo: false
 
 deploy:
   # Deploy master branch to production environment  on merge (or push)
