--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,3 +4,4 @@ RUN apt-get update
 
 # Install basic applications
 RUN apt-get install -y tar git curl nano wget dialog net-tools build-essential
+ADD sites-enabled/ /etc/nginx/sites-enabled
