change app.ini to increase buffer size and use http-socket

--- a/app/app.ini
+++ b/app/app.ini
@@ -4,6 +4,7 @@ module = wsgi
 master = true
 processes = 5
 
-socket = 127.0.0.1:8000
-chmod-socket = 664
+buffer-size = 32768
+http-socket  = 127.0.0.1:5000
+chmod-socket = 666
 vacuum = true
