use django-app-template for nginx configuration

--- a/app/app.ini
+++ b/app/app.ini
@@ -5,6 +5,6 @@ master = true
 processes = 5
 
 buffer-size = 32768
-http-socket  = 127.0.0.1:5000
+socket = :5000
 chmod-socket = 666
 vacuum = true
