--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,4 +4,7 @@ RUN apt-get update
 
 # Install basic applications
 RUN apt-get install -y tar git curl nano wget dialog net-tools build-essential
-ADD sites-enabled/ /etc/nginx/sites-enabled
+COPY uwsgi_params /etc/nginx/uwsgi_params
+COPY app_nginx.conf /etc/nginx/conf.d/app_nginx.conf
+
+RUN rm /etc/nginx/conf.d/default.conf
