--- a/nginx/app_nginx.conf
+++ b/nginx/app_nginx.conf
@@ -1,34 +1,9 @@
-#app_nginx.conf
-
-# the upstream component nginx needs to connect to
-upstream uwsgi_server {
-    # server unix:///var/run/app.sock; # for a file socket
-    server appsvr:5000; # for a web port socket (we'll use this first)
+server{    
+    listen 80;
+    server_name localhost;
+    location / { try_files $uri @application; }
+    location @application {
+    include uwsgi_params;
+    uwsgi_pass 127.0.0.1:8000;
 }
-
-# configuration of the server
-server {
-    # the port your site will be served on
-    listen      8000;
-    # the domain name it will serve for
-    server_name 127.0.0.1;
-    charset     utf-8;
-
-    # max upload size
-    client_max_body_size 75M;   # adjust to taste
-
-    # Django media
-    location /media  {
-        alias /opt/app/media;
-    }
-
-    location /static {
-        alias /opt/app/static;
-    }
-
-    # Finally, send all non-media requests to the Django server.
-    location / {
-        uwsgi_pass  uwsgi_server;
-        include     /etc/nginx/uwsgi_params;
-    }
 }
