use nginx configuration from django-app-template and changed nginx port from :8000 to :80

--- a/nginx/app_nginx.conf
+++ b/nginx/app_nginx.conf
@@ -1,9 +1,14 @@
+upstream uwsgi_server{
+    server appsvr:5000;
+}
+
 server{    
     listen 80;
     server_name localhost;
-    location / { try_files $uri @application; }
-    location @application {
-    include uwsgi_params;
-    uwsgi_pass 127.0.0.1:8000;
+
+   location / {
+        uwsgi_pass  uwsgi_server;
+        include     /etc/nginx/uwsgi_params;
+    }
 }
-}
+
